Passing in TrackedProperty model instead

--- a/LightMasterMVVM/LightMasterMVVM/Views/CreateGraph.xaml
+++ b/LightMasterMVVM/LightMasterMVVM/Views/CreateGraph.xaml
@@ -4,42 +4,118 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="LightMasterMVVM.Views.CreateGraph">
-  <Grid ColumnDefinitions="500,200,200" RowDefinitions="620,100" HorizontalAlignment="Center">
-    <Border Background="#1E1E1E" BorderBrush="Black" Margin="10" BorderThickness="4,0,0,4" Grid.Column="0" Grid.Row="0" CornerRadius="4">
-      <Grid ColumnDefinitions="*,*" Margin="10">
-        <StackPanel Grid.Column="0" Margin="5,0">
-          <TextBlock Text="Currently Tracking" FontSize="15" FontWeight="Bold" VerticalAlignment="Center" Foreground="White" HorizontalAlignment="Center" Margin="0,5"/>
+  <StackPanel>
+    <Grid ColumnDefinitions="500,200,200" RowDefinitions="620" HorizontalAlignment="Center">
+      <Border Background="#1E1E1E" BorderBrush="Black" Margin="10" BorderThickness="4,0,0,4" Grid.Column="0" Grid.Row="0" CornerRadius="4">
+        <Grid ColumnDefinitions="*,*" Margin="10">
+          <StackPanel Grid.Column="0" Margin="5,0">
+            <TextBlock Text="Currently Tracking" FontSize="15" FontWeight="Bold" VerticalAlignment="Center" Foreground="White" HorizontalAlignment="Center" Margin="0,5"/>
+            <ScrollViewer VerticalScrollBarVisibility="Hidden" MaxHeight="540" Margin="0,5">
+              <StackPanel>
+                <ItemsControl Items="{Binding TrackBy}">
+                  <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                      <Border Background="#242424" BorderBrush="#101010" BorderThickness="2,0,0,2" CornerRadius="8" Height="40" Padding="10" Margin="10,5">
+                        <Grid ColumnDefinitions="2*,20,20,20">
+                          <TextBlock Text="{Binding OrderTypeProperty}" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="White" FontSize="15" FontWeight="Bold" Grid.Column="0"/>
+                          <Button Grid.Column="1" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}, Path=DataContext.RemoveTrackProperty}" CommandParameter="{Binding OrderTypeProperty}">
+                            <Button.Template>
+                              <ControlTemplate TargetType="{x:Type Button}">
+                                <TextBlock Text="x" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="LightPink" FontSize="15" FontWeight="Bold" Grid.Column="1"/>
+                              </ControlTemplate>
+                            </Button.Template>
+                          </Button>
+
+                          <Button Grid.Column="2" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}, Path=DataContext.ChangeOrderOfTrackPropertyUp}" CommandParameter="{Binding OrderTypeProperty}">
+                            <Button.Template>
+                              <ControlTemplate TargetType="{x:Type Button}">
+                                <TextBlock Text="U" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="White" FontSize="15" FontWeight="Bold" Grid.Column="2"/>
+                              </ControlTemplate>
+                            </Button.Template>
+                          </Button>
+
+                          <Button Grid.Column="3" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}, Path=DataContext.ChangeOrderOfTrackPropertyDown}" CommandParameter="{Binding OrderTypeProperty}">
+                            <Button.Template>
+                              <ControlTemplate TargetType="{x:Type Button}">
+                                <TextBlock Text="D" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="White" FontSize="15" FontWeight="Bold" Grid.Column="3"/>
+                              </ControlTemplate>
+                            </Button.Template>
+                          </Button>
+
+                        </Grid>
+
+                      </Border>
+                    </DataTemplate>
+                  </ItemsControl.ItemTemplate>
+                </ItemsControl>
+
+              </StackPanel>
+            </ScrollViewer>
+          </StackPanel>
+          <StackPanel Grid.Column="1" Margin="5,0">
+            <TextBlock Text="Ordered By" FontSize="15" FontWeight="Bold" VerticalAlignment="Center" Foreground="White" HorizontalAlignment="Center" Margin="0,5"/>
+            <ScrollViewer VerticalScrollBarVisibility="Hidden" MaxHeight="540" Margin="0,5">
+              <StackPanel>
+                <ItemsControl Items="{Binding OrderedBy}">
+                  <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                      <Border Background="#242424" BorderBrush="#101010" BorderThickness="2,0,0,2" CornerRadius="8" Height="40" Padding="10" Margin="10,5">
+                        <Grid ColumnDefinitions="2*,20,20,20">
+                          <TextBlock Text="{Binding OrderTypeProperty}" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="White" FontSize="15" FontWeight="Bold" Grid.Column="0"/>
+                          <Button Grid.Column="1" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}, Path=DataContext.RemoveOrderProperty}" CommandParameter="{Binding OrderTypeProperty}">
+                            <Button.Template>
+                              <ControlTemplate TargetType="{x:Type Button}">
+                                <TextBlock Text="x" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="LightPink" FontSize="15" FontWeight="Bold" Grid.Column="1"/>
+                              </ControlTemplate>
+                            </Button.Template>
+                          </Button>
+
+                          <Button Grid.Column="2" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}, Path=DataContext.ChangeOrderOfOrderPropertyUp}" CommandParameter="{Binding OrderTypeProperty}">
+                            <Button.Template>
+                              <ControlTemplate TargetType="{x:Type Button}">
+                                <TextBlock Text="U" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="White" FontSize="15" FontWeight="Bold" Grid.Column="2"/>
+                              </ControlTemplate>
+                            </Button.Template>
+                          </Button>
+
+                          <Button Grid.Column="3" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}, Path=DataContext.ChangeOrderOfOrderPropertyDown}" CommandParameter="{Binding OrderTypeProperty}">
+                            <Button.Template>
+                              <ControlTemplate TargetType="{x:Type Button}">
+                                <TextBlock Text="D" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="White" FontSize="15" FontWeight="Bold" Grid.Column="3"/>
+                              </ControlTemplate>
+                            </Button.Template>
+                          </Button>
+
+                        </Grid>
+
+                      </Border>
+                    </DataTemplate>
+                  </ItemsControl.ItemTemplate>
+                </ItemsControl>
+              </StackPanel>
+            </ScrollViewer>
+          </StackPanel>
+        </Grid>
+      </Border>
+      <Border Background="#1E1E1E" BorderBrush="Black" Margin="10" BorderThickness="4,0,0,4" Grid.Column="1" Grid.Row="0" CornerRadius="4">
+        <StackPanel Margin="0,10">
+          <TextBlock Text="Tracking Options" FontSize="15" FontWeight="Bold" VerticalAlignment="Center" Foreground="White" HorizontalAlignment="Center" Margin="0,5"/>
           <ScrollViewer VerticalScrollBarVisibility="Hidden" MaxHeight="540" Margin="0,5">
             <StackPanel>
-              <ItemsControl Items="{Binding TrackBy}">
+              <ItemsControl Items="{Binding AllTrackOptions}">
                 <ItemsControl.ItemTemplate>
                   <DataTemplate>
-                    <Border Background="#242424" BorderBrush="#101010" BorderThickness="2,0,0,2" CornerRadius="8" Height="40" Padding="10" Margin="10,5">
-                      <Grid ColumnDefinitions="2*,20,20,20">
+                    <Border Background="#242424"  BorderBrush="#101010" BorderThickness="2,0,0,2" CornerRadius="8" Height="40" Padding="10" Margin="10,5" IsVisible="{Binding Show}">
+                      <Grid ColumnDefinitions="*,20">
                         <TextBlock Text="{Binding OrderTypeProperty}" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="White" FontSize="15" FontWeight="Bold" Grid.Column="0"/>
-                        <Button Grid.Column="1" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}, Path=DataContext.RemoveTrackProperty}" CommandParameter="{Binding OrderTypeProperty}">
+                        <Button Grid.Column="1" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}, Path=DataContext.AddTrackProperty}" CommandParameter="{Binding OrderTypeProperty}">
                           <Button.Template>
                             <ControlTemplate TargetType="{x:Type Button}">
-                              <TextBlock Text="x" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="LightPink" FontSize="15" FontWeight="Bold" Grid.Column="1"/>
+                              <TextBlock Text="+" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="LightGreen" FontSize="15" FontWeight="Bold"/>
                             </ControlTemplate>
                           </Button.Template>
                         </Button>
 
-                        <Button Grid.Column="2" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}, Path=DataContext.ChangeOrderOfTrackPropertyUp}" CommandParameter="{Binding OrderTypeProperty}">
-                          <Button.Template>
-                            <ControlTemplate TargetType="{x:Type Button}">
-                              <TextBlock Text="U" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="White" FontSize="15" FontWeight="Bold" Grid.Column="2"/>
-                            </ControlTemplate>
-                          </Button.Template>
-                        </Button>
-
-                        <Button Grid.Column="3" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}, Path=DataContext.ChangeOrderOfTrackPropertyDown}" CommandParameter="{Binding OrderTypeProperty}">
-                          <Button.Template>
-                            <ControlTemplate TargetType="{x:Type Button}">
-                              <TextBlock Text="D" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="White" FontSize="15" FontWeight="Bold" Grid.Column="3"/>
-                            </ControlTemplate>
-                          </Button.Template>
-                        </Button>
 
                       </Grid>
 
@@ -47,43 +123,32 @@
                   </DataTemplate>
                 </ItemsControl.ItemTemplate>
               </ItemsControl>
-              
+
+
             </StackPanel>
           </ScrollViewer>
         </StackPanel>
-        <StackPanel Grid.Column="1" Margin="5,0">
-          <TextBlock Text="Ordered By" FontSize="15" FontWeight="Bold" VerticalAlignment="Center" Foreground="White" HorizontalAlignment="Center" Margin="0,5"/>
+      </Border>
+      <Border Background="#1E1E1E" BorderBrush="Black" Margin="10" BorderThickness="4,0,0,4" Grid.Column="2" Grid.Row="0" CornerRadius="4">
+        <StackPanel Margin="0,10">
+          <TextBlock Text="Ordering Options" FontSize="15" FontWeight="Bold" VerticalAlignment="Center" Foreground="White" HorizontalAlignment="Center" Margin="0,5"/>
           <ScrollViewer VerticalScrollBarVisibility="Hidden" MaxHeight="540" Margin="0,5">
             <StackPanel>
-              <ItemsControl Items="{Binding OrderedBy}">
+
+              <ItemsControl Items="{Binding AllOrderOptions}">
                 <ItemsControl.ItemTemplate>
                   <DataTemplate>
-                    <Border Background="#242424" BorderBrush="#101010" BorderThickness="2,0,0,2" CornerRadius="8" Height="40" Padding="10" Margin="10,5">
-                      <Grid ColumnDefinitions="2*,20,20,20">
+                    <Border Background="#242424"  BorderBrush="#101010" BorderThickness="2,0,0,2" CornerRadius="8" Height="40" Padding="10" Margin="10,5" IsVisible="{Binding Show}">
+                      <Grid ColumnDefinitions="*,20">
                         <TextBlock Text="{Binding OrderTypeProperty}" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="White" FontSize="15" FontWeight="Bold" Grid.Column="0"/>
-                        <Button Grid.Column="1" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}, Path=DataContext.RemoveOrderProperty}" CommandParameter="{Binding OrderTypeProperty}">
+                        <Button Grid.Column="1" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}, Path=DataContext.AddOrderProperty}" CommandParameter="{Binding OrderTypeProperty}">
                           <Button.Template>
                             <ControlTemplate TargetType="{x:Type Button}">
-                              <TextBlock Text="x" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="LightPink" FontSize="15" FontWeight="Bold" Grid.Column="1"/>
+                              <TextBlock Text="+" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="LightGreen" FontSize="15" FontWeight="Bold"/>
                             </ControlTemplate>
                           </Button.Template>
                         </Button>
 
-                        <Button Grid.Column="2" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}, Path=DataContext.ChangeOrderOfOrderPropertyUp}" CommandParameter="{Binding OrderTypeProperty}">
-                          <Button.Template>
-                            <ControlTemplate TargetType="{x:Type Button}">
-                              <TextBlock Text="U" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="White" FontSize="15" FontWeight="Bold" Grid.Column="2"/>
-                            </ControlTemplate>
-                          </Button.Template>
-                        </Button>
-
-                        <Button Grid.Column="3" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}, Path=DataContext.ChangeOrderOfOrderPropertyDown}" CommandParameter="{Binding OrderTypeProperty}">
-                          <Button.Template>
-                            <ControlTemplate TargetType="{x:Type Button}">
-                              <TextBlock Text="D" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="White" FontSize="15" FontWeight="Bold" Grid.Column="3"/>
-                            </ControlTemplate>
-                          </Button.Template>
-                        </Button>
 
                       </Grid>
 
@@ -94,73 +159,12 @@
             </StackPanel>
           </ScrollViewer>
         </StackPanel>
-      </Grid>
-    </Border>
-    <Border Background="#1E1E1E" BorderBrush="Black" Margin="10" BorderThickness="4,0,0,4" Grid.Column="1" Grid.Row="0" CornerRadius="4">
-      <StackPanel Margin="0,10">
-        <TextBlock Text="Tracking Options" FontSize="15" FontWeight="Bold" VerticalAlignment="Center" Foreground="White" HorizontalAlignment="Center" Margin="0,5"/>
-        <ScrollViewer VerticalScrollBarVisibility="Hidden" MaxHeight="540" Margin="0,5">
-          <StackPanel>
-            <ItemsControl Items="{Binding AllTrackOptions}">
-              <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                  <Border Background="#242424"  BorderBrush="#101010" BorderThickness="2,0,0,2" CornerRadius="8" Height="40" Padding="10" Margin="10,5" IsVisible="{Binding Show}">
-                    <Grid ColumnDefinitions="*,20">
-                      <TextBlock Text="{Binding OrderTypeProperty}" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="White" FontSize="15" FontWeight="Bold" Grid.Column="0"/>
-                      <Button Grid.Column="1" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}, Path=DataContext.AddTrackProperty}" CommandParameter="{Binding OrderTypeProperty}">
-                        <Button.Template>
-                          <ControlTemplate TargetType="{x:Type Button}">
-                            <TextBlock Text="+" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="LightGreen" FontSize="15" FontWeight="Bold"/>
-                          </ControlTemplate>
-                        </Button.Template>
-                      </Button>
 
 
-                    </Grid>
-
-                  </Border>
-                </DataTemplate>
-              </ItemsControl.ItemTemplate>
-            </ItemsControl>
-            
-            
-          </StackPanel>
-        </ScrollViewer>
-      </StackPanel>
-    </Border>
-    <Border Background="#1E1E1E" BorderBrush="Black" Margin="10" BorderThickness="4,0,0,4" Grid.Column="2" Grid.Row="0" CornerRadius="4">
-      <StackPanel Margin="0,10">
-        <TextBlock Text="Ordering Options" FontSize="15" FontWeight="Bold" VerticalAlignment="Center" Foreground="White" HorizontalAlignment="Center" Margin="0,5"/>
-        <ScrollViewer VerticalScrollBarVisibility="Hidden" MaxHeight="540" Margin="0,5">
-          <StackPanel>
-
-            <ItemsControl Items="{Binding AllOrderOptions}">
-              <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                  <Border Background="#242424"  BorderBrush="#101010" BorderThickness="2,0,0,2" CornerRadius="8" Height="40" Padding="10" Margin="10,5" IsVisible="{Binding Show}">
-                    <Grid ColumnDefinitions="*,20">
-                      <TextBlock Text="{Binding OrderTypeProperty}" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="White" FontSize="15" FontWeight="Bold" Grid.Column="0"/>
-                      <Button Grid.Column="1" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}, Path=DataContext.AddOrderProperty}" CommandParameter="{Binding OrderTypeProperty}">
-                        <Button.Template>
-                          <ControlTemplate TargetType="{x:Type Button}">
-                            <TextBlock Text="+" VerticalAlignment="Center" HorizontalAlignment="Right" Foreground="LightGreen" FontSize="15" FontWeight="Bold"/>
-                          </ControlTemplate>
-                        </Button.Template>
-                      </Button>
-
-
-                    </Grid>
-
-                  </Border>
-                </DataTemplate>
-              </ItemsControl.ItemTemplate>
-            </ItemsControl>
-          </StackPanel>
-        </ScrollViewer>
-      </StackPanel>
+      </Border>
       
-      
-    </Border>
-    <Button Content="Go Create Graph" Command="{Binding CreateGraph}" Grid.Row="1"/>
-  </Grid>
+    </Grid>
+    <Button Content="Create New Graph" Command="{Binding CreateGraph}" Classes="navbutton" Foreground="White" Height="60" Padding="20" Width="400" Margin="10"/>
+  </StackPanel>
+  
 </UserControl>
