--- a/LightMasterMVVM/LightMasterMVVM/Views/Tablets.xaml
+++ b/LightMasterMVVM/LightMasterMVVM/Views/Tablets.xaml
@@ -34,7 +34,10 @@
     </Border>
     <Border Background="#1E1E1E" BorderBrush="Black" BorderThickness="3,0,0,3" Height="300" Width="240" CornerRadius="6" Grid.Row="0" Grid.Column="1" Margin="7">
       <Grid ColumnDefinitions="*" RowDefinitions="230,50" VerticalAlignment="Center">
-        <Image Source="{Binding QRImage}" Margin="0,0,0,5" Grid.Row="0"/>
+        <Border Background="White" CornerRadius="4" Padding="14" Margin="10,10,13,15" Grid.Row="0">
+          <Image Source="{Binding QRImage}"/>
+        </Border>
+
         <Grid ColumnDefinitions="*,*,*" Margin="40,0,40,5" Grid.Row="1">
           <Border Grid.Column="0" BorderBrush="White" Background="White" CornerRadius="3" Height="35" Width="35" BorderThickness="1" VerticalAlignment="Center">
             <Image Source="resm:LightMasterMVVM.Assets.ui-bluetooth.png" Margin="0,5,0,5" ToolTip.Tip="{Binding LastPings[1]}"/>
